# laughing-pancake

./: .gitignore  CURRENT_GUI_DESCRIPTION.md  Cargo.toml  README.md  lumbras.html  run.sh
jules-scratch/verification/: verify_changes.py  verify_progress_bar.py
resources/: otb-2025.7z
src/: config.rs  constants.rs  ga.rs  main.rs  mock_api.rs
src/app/: mod.rs
src/event/: mod.rs
src/game/: mod.rs  search.rs
src/game/evaluation/: advanced_pawn_structure.rs  bishops.rs  development.rs  initiative.rs  king_attack.rs  king_safety.rs  knights.rs  mobility.rs  mod.rs  opponent_weakness.rs  passed_pawns.rs  pawn_structure.rs  pst.rs  rooks.rs  see.rs  space.rs  tests.rs  threats.rs
src/game/search/: delta.rs  evaluation_cache.rs  futility.rs  lmr.rs  mcts.rs  mcts_cache.rs  null_move.rs  pvs.rs  quiescence.rs  tt.rs
src/server/: mod.rs
src/sts/: mod.rs
src/ui/: mod.rs
src/worker/: mod.rs
static/: generation.html  history.html  index.html  individual.html  main_style.css  sts.html  style.css
