[package]
name = "rust-chess-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
shakmaty = "0.29.3"
shakmaty-syzygy = "0.27.0"
ratatui = { version = "0.26.2", features = ["crossterm"] }
crossterm = "0.27.0"
rand = "0.8.5"
clap = { version = "4.5.49", features = ["derive"] }
pgn-reader = "0.28.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
num_cpus = "1.17.0"
crossbeam-channel = "0.5.15"
crossbeam-utils = "0.8.21"
lazy_static = "1.4.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-panic = "0.1"
