[package]
name = "rust-chess-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.37.2"
shakmaty = "0.29.3"
shakmaty-syzygy = "0.27.0"
ratatui = { version = "0.26.2", features = ["crossterm"] }
crossterm = "0.27.0"
rand = "0.8.5"
clap = { version = "4.5.49", features = ["derive"] }
pgn-reader = "0.28.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
num_cpus = "1.17.0"
crossbeam-channel = "0.5.15"
crossbeam-utils = "0.8.21"
lazy_static = "1.4.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-panic = "0.1"
rayon = "1.10.0"
tokio = { version = "1.39.2", features = ["full"] }
actix = "0.13.5"
actix-web = "4.8.0"
actix-web-actors = "4.3.0"
actix-rt = "2.10.0"
futures-util = "0.3.30"
once_cell = "1.19.0"
tokio-stream = { version = "0.1", features = ["sync"] }
actix-files = "0.6.7"
